MainFragment: Make New Question Button invisible when user is admin

--- a/app/src/main/res/layout/main_question.xml
+++ b/app/src/main/res/layout/main_question.xml
@@ -15,6 +15,7 @@
             android:layout_marginBottom="60dp" />
 
         <RelativeLayout
+            android:id="@+id/mainQNAConfirmLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_alignParentBottom="true"
