--- a/app/src/main/res/layout/main_prize_recycler_content.xml
+++ b/app/src/main/res/layout/main_prize_recycler_content.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"
             android:orientation="horizontal">
-
+git
             <TextView
                 android:id="@+id/prizeContentNumber"
                 android:layout_width="wrap_content"
