--- a/app/src/main/res/layout/main_mainboard.xml
+++ b/app/src/main/res/layout/main_mainboard.xml
@@ -110,6 +110,7 @@
                 </RelativeLayout>
 
                 <kr.edcan.alime.views.CartaTagView
+                    android:id="@+id/mainDashboardStartStop"
                     android:layout_width="200dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
