--- a/app/src/main/res/layout/main_prize_recycler_content.xml
+++ b/app/src/main/res/layout/main_prize_recycler_content.xml
@@ -18,14 +18,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"
             android:orientation="horizontal">
-git
             <TextView
                 android:id="@+id/prizeContentNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
                 android:textColor="#FFF"
-                android:textSize="30sp"
+                android:textSize="25dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -33,7 +32,7 @@ git
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFF"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
             <View
                 android:layout_width="2dp"
@@ -50,7 +49,7 @@ git
                 android:layout_marginLeft="16dp"
                 android:text="금메달"
                 android:textColor="#FFF"
-                android:textSize="30sp"
+                android:textSize="25dp"
                 android:textStyle="bold" />
 
             <View
@@ -69,7 +68,7 @@ git
                 android:layout_marginLeft="16dp"
                 android:text="1200"
                 android:textColor="#FFF"
-                android:textSize="30sp"
+                android:textSize="25dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -78,7 +77,7 @@ git
                 android:layout_height="wrap_content"
                 android:text="만원"
                 android:textColor="#FFF"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
         </LinearLayout>
 
