--- a/app/src/main/res/menu/question_menu.xml
+++ b/app/src/main/res/menu/question_menu.xml
@@ -5,4 +5,8 @@
         android:id="@+id/answer"
         android:title="답변하기"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/deleteFromAdmin"
+        android:title="삭제하기"
+        app:showAsAction="always" />
 </menu>
